--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.10.7",
     "element-plus": "^1.2.0-beta.6",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.0",
     "pinia": "^2.0.4",
     "sass": "^1.43.4",
     "vue": "^3.2.16",
