--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "eslint-plugin-vue": "^8.1.1",
     "postcss": "^8.4.5",
     "prettier": "^2.4.1",
+    "stylelint-config-recommended": "^6.0.0",
     "stylelint-config-standard": "^24.0.0",
+    "stylelint-scss": "^4.1.0",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.4.3",
     "unplugin-auto-import": "^0.5.3",
